Fix #163 and fix #209 and fix #220.  Keep cursor name on screen by pushing it down a bit.  Set white-space: nowrap.  Rearrange the elements a little to group states and the name together.

--- a/app/http/public/towtruck.less
+++ b/app/http/public/towtruck.less
@@ -1201,11 +1201,12 @@
         }
     }
 
-    .towtruck-cursor-name {
+    .towtruck-cursor-container {
+        white-space: nowrap;
 	    font-family: @default-font;
         font-size: 40%;
         position: relative;
-        top: -30px;
+        top: -25px;
         left: 0px;
         padding: 8px;
         border-radius: 2px;
